hw4/vm/asm.output
Grammar

    0 $accept: program $end

    1 program: textSection dataSection stackSection ".end"

    2 textSection: ".text" entryPoint asmInstrs

    3 entryPoint: addr

    4 addr: label
    5     | unsignednumsym

    6 label: identsym

    7 asmInstrs: asmInstr
    8          | asmInstrs asmInstr

    9 asmInstr: labelOpt instr eolsym

   10 labelOpt: label ":"
   11         | empty

   12 empty: ε

   13 instr: noArgInstr
   14      | twoRegCompInstr
   15      | twoRegNoOffsetsInstr
   16      | noTargetOffsetInstr
   17      | noSourceOffsetInstr
   18      | oneRegOffsetArgInstr
   19      | oneRegArgInstr
   20      | oneRegOffsetInstr
   21      | shiftInstr
   22      | argOnlyInstr
   23      | immedArithInstr
   24      | immedBoolInstr
   25      | branchTestInstr
   26      | jumpInstr
   27      | syscallInstr

   28 noArgInstr: noArgOp

   29 noArgOp: "NOP"
   30        | "RTN"

   31 twoRegCompInstr: twoRegCompOp regsym "," offset "," regsym "," offset

   32 twoRegCompOp: "ADD"
   33             | "SUB"
   34             | "CPW"
   35             | "AND"
   36             | "BOR"
   37             | "NOR"
   38             | "XOR"
   39             | "SCA"
   40             | "LWI"
   41             | "NEG"

   42 offset: number

   43 number: sign unsignednumsym

   44 sign: "+"
   45     | "-"
   46     | empty

   47 twoRegNoOffsetsInstr: twoRegNoOffsetsOp regsym "," regsym

   48 twoRegNoOffsetsOp: "CPR"

   49 noTargetOffsetInstr: noTargetOffsetOp regsym "," regsym "," offset

   50 noTargetOffsetOp: "LWR"

   51 noSourceOffsetInstr: noSourceOffsetOp regsym "," offset "," regsym

   52 noSourceOffsetOp: "SWR"

   53 oneRegOffsetArgInstr: oneRegOffsetArgOp regsym "," offset "," arg

   54 oneRegOffsetArgOp: "LIT"

   55 arg: number

   56 oneRegArgInstr: oneRegArgOp regsym "," arg

   57 oneRegArgOp: "ARI"
   58            | "SRI"

   59 oneRegOffsetInstr: oneRegOffsetOp regsym "," offset

   60 oneRegOffsetOp: "MUL"
   61               | "DIV"
   62               | "CFHI"
   63               | "CFLO"
   64               | "JMP"
   65               | "CSI"

   66 shiftInstr: shiftOp regsym "," offset "," shift

   67 shiftOp: "SLL"
   68        | "SRL"

   69 shift: unsignednumsym

   70 argOnlyInstr: argOnlyOp arg

   71 argOnlyOp: "JREL"

   72 immedArithInstr: immedArithOp regsym "," offset "," immed

   73 immedArithOp: "ADDI"

   74 immed: number

   75 immedBoolInstr: immedBoolOp regsym "," offset "," uimmed

   76 immedBoolOp: "ANDI"
   77            | "BORI"
   78            | "XORI"
   79            | "NORI"

   80 uimmed: unsignednumsym

   81 branchTestInstr: branchTestOp regsym "," offset "," immed

   82 branchTestOp: "BEQ"
   83             | "BGEZ"
   84             | "BGTZ"
   85             | "BLEZ"
   86             | "BLTZ"
   87             | "BNE"

   88 jumpInstr: jumpOp addr

   89 jumpOp: "JMPA"
   90       | "CALL"

   91 syscallInstr: offsetOnlySyscall
   92             | regOffsetSyscall
   93             | noArgSyscall

   94 offsetOnlySyscall: offsetOnlySyscallOp offset

   95 offsetOnlySyscallOp: "EXIT"

   96 regOffsetSyscall: regOffsetSyscallOp regsym "," offset

   97 regOffsetSyscallOp: "PSTR"
   98                   | "PINT"
   99                   | "PCH"
  100                   | "RCH"

  101 noArgSyscall: noArgSyscallOp

  102 noArgSyscallOp: "STRA"
  103               | "NOTR"

  104 dataSection: ".data" staticStartAddr staticDecls

  105 staticStartAddr: unsignednumsym

  106 staticDecls: empty
  107            | staticDecls staticDecl

  108 staticDecl: dataSize identsym initializerOpt eolsym

  109 dataSize: "WORD"
  110         | "CHAR"
  111         | "STRING" "[" unsignednumsym "]"

  112 initializerOpt: "=" number
  113               | "=" charliteralsym
  114               | "=" stringliteralsym
  115               | empty

  116 stackSection: ".stack" stackBottomAddr

  117 stackBottomAddr: unsignednumsym


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    eolsym (258) 9 108
    identsym <ident> (259) 6 108
    unsignednumsym <unsignednum> (260) 5 43 69 80 105 111 117
    "+" <token> (261) 44
    "-" <token> (262) 45
    "," (263) 31 47 49 51 53 56 59 66 72 75 81 96
    ".text" <token> (264) 2
    ".data" <token> (265) 104
    ".stack" <token> (266) 116
    ".end" (267) 1
    ":" (268) 10
    "[" <token> (269) 111
    "]" <token> (270) 111
    "=" <token> (271) 112 113 114
    "NOP" <token> (272) 29
    "ADD" <token> (273) 32
    "SUB" <token> (274) 33
    "CPW" <token> (275) 34
    "CPR" <token> (276) 48
    "AND" <token> (277) 35
    "BOR" <token> (278) 36
    "NOR" <token> (279) 37
    "XOR" <token> (280) 38
    "LWR" <token> (281) 50
    "SWR" <token> (282) 52
    "SCA" <token> (283) 39
    "LWI" <token> (284) 40
    "NEG" <token> (285) 41
    "LIT" <token> (286) 54
    "ARI" <token> (287) 57
    "SRI" <token> (288) 58
    "MUL" <token> (289) 60
    "DIV" <token> (290) 61
    "CFHI" <token> (291) 62
    "CFLO" <token> (292) 63
    "SLL" <token> (293) 67
    "SRL" <token> (294) 68
    "JMP" <token> (295) 64
    "JREL" <token> (296) 71
    "ADDI" <token> (297) 73
    "ANDI" <token> (298) 76
    "BORI" <token> (299) 77
    "NORI" <token> (300) 79
    "XORI" <token> (301) 78
    "BEQ" <token> (302) 82
    "BGEZ" <token> (303) 83
    "BLEZ" <token> (304) 85
    "BGTZ" <token> (305) 84
    "BLTZ" <token> (306) 86
    "BNE" <token> (307) 87
    "CSI" <token> (308) 65
    "JMPA" <token> (309) 89
    "CALL" <token> (310) 90
    "RTN" <token> (311) 30
    "EXIT" <token> (312) 95
    "PSTR" <token> (313) 97
    "PINT" <token> (314) 98
    "PCH" <token> (315) 99
    "RCH" <token> (316) 100
    "STRA" <token> (317) 102
    "NOTR" <token> (318) 103
    regsym <reg> (319) 31 47 49 51 53 56 59 66 72 75 81 96
    "WORD" <token> (320) 109
    "CHAR" <token> (321) 110
    "STRING" <token> (322) 111
    charliteralsym <charlit> (323) 113
    stringliteralsym <stringlit> (324) 114


Nonterminals, with rules where they appear

    $accept (70)
        on left: 0
    program <program> (71)
        on left: 1
        on right: 0
    textSection <text_section> (72)
        on left: 2
        on right: 1
    entryPoint <addr> (73)
        on left: 3
        on right: 2
    addr <addr> (74)
        on left: 4 5
        on right: 3 88
    label <ident> (75)
        on left: 6
        on right: 4 10
    asmInstrs <asm_instrs> (76)
        on left: 7 8
        on right: 2 8
    asmInstr <asm_instr> (77)
        on left: 9
        on right: 7 8
    labelOpt <label_opt> (78)
        on left: 10 11
        on right: 9
    empty <empty> (79)
        on left: 12
        on right: 11 46 106 115
    instr <instr> (80)
        on left: 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
        on right: 9
    noArgInstr <instr> (81)
        on left: 28
        on right: 13
    noArgOp <token> (82)
        on left: 29 30
        on right: 28
    twoRegCompInstr <instr> (83)
        on left: 31
        on right: 14
    twoRegCompOp <token> (84)
        on left: 32 33 34 35 36 37 38 39 40 41
        on right: 31
    offset <number> (85)
        on left: 42
        on right: 31 49 51 53 59 66 72 75 81 94 96
    number <number> (86)
        on left: 43
        on right: 42 55 74 112
    sign <token> (87)
        on left: 44 45 46
        on right: 43
    twoRegNoOffsetsInstr <instr> (88)
        on left: 47
        on right: 15
    twoRegNoOffsetsOp <token> (89)
        on left: 48
        on right: 47
    noTargetOffsetInstr <instr> (90)
        on left: 49
        on right: 16
    noTargetOffsetOp <token> (91)
        on left: 50
        on right: 49
    noSourceOffsetInstr <instr> (92)
        on left: 51
        on right: 17
    noSourceOffsetOp <token> (93)
        on left: 52
        on right: 51
    oneRegOffsetArgInstr <instr> (94)
        on left: 53
        on right: 18
    oneRegOffsetArgOp <token> (95)
        on left: 54
        on right: 53
    arg <number> (96)
        on left: 55
        on right: 53 56 70
    oneRegArgInstr <instr> (97)
        on left: 56
        on right: 19
    oneRegArgOp <token> (98)
        on left: 57 58
        on right: 56
    oneRegOffsetInstr <instr> (99)
        on left: 59
        on right: 20
    oneRegOffsetOp <token> (100)
        on left: 60 61 62 63 64 65
        on right: 59
    shiftInstr <instr> (101)
        on left: 66
        on right: 21
    shiftOp <token> (102)
        on left: 67 68
        on right: 66
    shift <immed> (103)
        on left: 69
        on right: 66
    argOnlyInstr <instr> (104)
        on left: 70
        on right: 22
    argOnlyOp <token> (105)
        on left: 71
        on right: 70
    immedArithInstr <instr> (106)
        on left: 72
        on right: 23
    immedArithOp <token> (107)
        on left: 73
        on right: 72
    immed <immed> (108)
        on left: 74
        on right: 72 81
    immedBoolInstr <instr> (109)
        on left: 75
        on right: 24
    immedBoolOp <token> (110)
        on left: 76 77 78 79
        on right: 75
    uimmed <immed> (111)
        on left: 80
        on right: 75
    branchTestInstr <instr> (112)
        on left: 81
        on right: 25
    branchTestOp <token> (113)
        on left: 82 83 84 85 86 87
        on right: 81
    jumpInstr <instr> (114)
        on left: 88
        on right: 26
    jumpOp <token> (115)
        on left: 89 90
        on right: 88
    syscallInstr <instr> (116)
        on left: 91 92 93
        on right: 27
    offsetOnlySyscall <instr> (117)
        on left: 94
        on right: 91
    offsetOnlySyscallOp <token> (118)
        on left: 95
        on right: 94
    regOffsetSyscall <instr> (119)
        on left: 96
        on right: 92
    regOffsetSyscallOp <token> (120)
        on left: 97 98 99 100
        on right: 96
    noArgSyscall <instr> (121)
        on left: 101
        on right: 93
    noArgSyscallOp <token> (122)
        on left: 102 103
        on right: 101
    dataSection <data_section> (123)
        on left: 104
        on right: 1
    staticStartAddr <unsignednum> (124)
        on left: 105
        on right: 104
    staticDecls <static_decls> (125)
        on left: 106 107
        on right: 104 107
    staticDecl <static_decl> (126)
        on left: 108
        on right: 107
    dataSize <data_size> (127)
        on left: 109 110 111
        on right: 108
    initializerOpt <initializer> (128)
        on left: 112 113 114 115
        on right: 108
    stackSection <stack_section> (129)
        on left: 116
        on right: 1
    stackBottomAddr <unsignednum> (130)
        on left: 117
        on right: 116


State 0

    0 $accept: • program $end

    ".text"  shift, and go to state 1

    program      go to state 2
    textSection  go to state 3


State 1

    2 textSection: ".text" • entryPoint asmInstrs

    identsym        shift, and go to state 4
    unsignednumsym  shift, and go to state 5

    entryPoint  go to state 6
    addr        go to state 7
    label       go to state 8


State 2

    0 $accept: program • $end

    $end  shift, and go to state 9


State 3

    1 program: textSection • dataSection stackSection ".end"

    ".data"  shift, and go to state 10

    dataSection  go to state 11


State 4

    6 label: identsym •

    $default  reduce using rule 6 (label)


State 5

    5 addr: unsignednumsym •

    $default  reduce using rule 5 (addr)


State 6

    2 textSection: ".text" entryPoint • asmInstrs

    identsym  shift, and go to state 4

    $default  reduce using rule 12 (empty)

    label      go to state 12
    asmInstrs  go to state 13
    asmInstr   go to state 14
    labelOpt   go to state 15
    empty      go to state 16


State 7

    3 entryPoint: addr •

    $default  reduce using rule 3 (entryPoint)


State 8

    4 addr: label •

    $default  reduce using rule 4 (addr)


State 9

    0 $accept: program $end •

    $default  accept


State 10

  104 dataSection: ".data" • staticStartAddr staticDecls

    unsignednumsym  shift, and go to state 17

    staticStartAddr  go to state 18


State 11

    1 program: textSection dataSection • stackSection ".end"

    ".stack"  shift, and go to state 19

    stackSection  go to state 20


State 12

   10 labelOpt: label • ":"

    ":"  shift, and go to state 21


State 13

    2 textSection: ".text" entryPoint asmInstrs •
    8 asmInstrs: asmInstrs • asmInstr

    identsym  shift, and go to state 4

    ".data"   reduce using rule 2 (textSection)
    $default  reduce using rule 12 (empty)

    label     go to state 12
    asmInstr  go to state 22
    labelOpt  go to state 15
    empty     go to state 16


State 14

    7 asmInstrs: asmInstr •

    $default  reduce using rule 7 (asmInstrs)


State 15

    9 asmInstr: labelOpt • instr eolsym

    "NOP"   shift, and go to state 23
    "ADD"   shift, and go to state 24
    "SUB"   shift, and go to state 25
    "CPW"   shift, and go to state 26
    "CPR"   shift, and go to state 27
    "AND"   shift, and go to state 28
    "BOR"   shift, and go to state 29
    "NOR"   shift, and go to state 30
    "XOR"   shift, and go to state 31
    "LWR"   shift, and go to state 32
    "SWR"   shift, and go to state 33
    "SCA"   shift, and go to state 34
    "LWI"   shift, and go to state 35
    "NEG"   shift, and go to state 36
    "LIT"   shift, and go to state 37
    "ARI"   shift, and go to state 38
    "SRI"   shift, and go to state 39
    "MUL"   shift, and go to state 40
    "DIV"   shift, and go to state 41
    "CFHI"  shift, and go to state 42
    "CFLO"  shift, and go to state 43
    "SLL"   shift, and go to state 44
    "SRL"   shift, and go to state 45
    "JMP"   shift, and go to state 46
    "JREL"  shift, and go to state 47
    "ADDI"  shift, and go to state 48
    "ANDI"  shift, and go to state 49
    "BORI"  shift, and go to state 50
    "NORI"  shift, and go to state 51
    "XORI"  shift, and go to state 52
    "BEQ"   shift, and go to state 53
    "BGEZ"  shift, and go to state 54
    "BLEZ"  shift, and go to state 55
    "BGTZ"  shift, and go to state 56
    "BLTZ"  shift, and go to state 57
    "BNE"   shift, and go to state 58
    "CSI"   shift, and go to state 59
    "JMPA"  shift, and go to state 60
    "CALL"  shift, and go to state 61
    "RTN"   shift, and go to state 62
    "EXIT"  shift, and go to state 63
    "PSTR"  shift, and go to state 64
    "PINT"  shift, and go to state 65
    "PCH"   shift, and go to state 66
    "RCH"   shift, and go to state 67
    "STRA"  shift, and go to state 68
    "NOTR"  shift, and go to state 69

    instr                 go to state 70
    noArgInstr            go to state 71
    noArgOp               go to state 72
    twoRegCompInstr       go to state 73
    twoRegCompOp          go to state 74
    twoRegNoOffsetsInstr  go to state 75
    twoRegNoOffsetsOp     go to state 76
    noTargetOffsetInstr   go to state 77
    noTargetOffsetOp      go to state 78
    noSourceOffsetInstr   go to state 79
    noSourceOffsetOp      go to state 80
    oneRegOffsetArgInstr  go to state 81
    oneRegOffsetArgOp     go to state 82
    oneRegArgInstr        go to state 83
    oneRegArgOp           go to state 84
    oneRegOffsetInstr     go to state 85
    oneRegOffsetOp        go to state 86
    shiftInstr            go to state 87
    shiftOp               go to state 88
    argOnlyInstr          go to state 89
    argOnlyOp             go to state 90
    immedArithInstr       go to state 91
    immedArithOp          go to state 92
    immedBoolInstr        go to state 93
    immedBoolOp           go to state 94
    branchTestInstr       go to state 95
    branchTestOp          go to state 96
    jumpInstr             go to state 97
    jumpOp                go to state 98
    syscallInstr          go to state 99
    offsetOnlySyscall     go to state 100
    offsetOnlySyscallOp   go to state 101
    regOffsetSyscall      go to state 102
    regOffsetSyscallOp    go to state 103
    noArgSyscall          go to state 104
    noArgSyscallOp        go to state 105


State 16

   11 labelOpt: empty •

    $default  reduce using rule 11 (labelOpt)


State 17

  105 staticStartAddr: unsignednumsym •

    $default  reduce using rule 105 (staticStartAddr)


State 18

  104 dataSection: ".data" staticStartAddr • staticDecls

    $default  reduce using rule 12 (empty)

    empty        go to state 106
    staticDecls  go to state 107


State 19

  116 stackSection: ".stack" • stackBottomAddr

    unsignednumsym  shift, and go to state 108

    stackBottomAddr  go to state 109


State 20

    1 program: textSection dataSection stackSection • ".end"

    ".end"  shift, and go to state 110


State 21

   10 labelOpt: label ":" •

    $default  reduce using rule 10 (labelOpt)


State 22

    8 asmInstrs: asmInstrs asmInstr •

    $default  reduce using rule 8 (asmInstrs)


State 23

   29 noArgOp: "NOP" •

    $default  reduce using rule 29 (noArgOp)


State 24

   32 twoRegCompOp: "ADD" •

    $default  reduce using rule 32 (twoRegCompOp)


State 25

   33 twoRegCompOp: "SUB" •

    $default  reduce using rule 33 (twoRegCompOp)


State 26

   34 twoRegCompOp: "CPW" •

    $default  reduce using rule 34 (twoRegCompOp)


State 27

   48 twoRegNoOffsetsOp: "CPR" •

    $default  reduce using rule 48 (twoRegNoOffsetsOp)


State 28

   35 twoRegCompOp: "AND" •

    $default  reduce using rule 35 (twoRegCompOp)


State 29

   36 twoRegCompOp: "BOR" •

    $default  reduce using rule 36 (twoRegCompOp)


State 30

   37 twoRegCompOp: "NOR" •

    $default  reduce using rule 37 (twoRegCompOp)


State 31

   38 twoRegCompOp: "XOR" •

    $default  reduce using rule 38 (twoRegCompOp)


State 32

   50 noTargetOffsetOp: "LWR" •

    $default  reduce using rule 50 (noTargetOffsetOp)


State 33

   52 noSourceOffsetOp: "SWR" •

    $default  reduce using rule 52 (noSourceOffsetOp)


State 34

   39 twoRegCompOp: "SCA" •

    $default  reduce using rule 39 (twoRegCompOp)


State 35

   40 twoRegCompOp: "LWI" •

    $default  reduce using rule 40 (twoRegCompOp)


State 36

   41 twoRegCompOp: "NEG" •

    $default  reduce using rule 41 (twoRegCompOp)


State 37

   54 oneRegOffsetArgOp: "LIT" •

    $default  reduce using rule 54 (oneRegOffsetArgOp)


State 38

   57 oneRegArgOp: "ARI" •

    $default  reduce using rule 57 (oneRegArgOp)


State 39

   58 oneRegArgOp: "SRI" •

    $default  reduce using rule 58 (oneRegArgOp)


State 40

   60 oneRegOffsetOp: "MUL" •

    $default  reduce using rule 60 (oneRegOffsetOp)


State 41

   61 oneRegOffsetOp: "DIV" •

    $default  reduce using rule 61 (oneRegOffsetOp)


State 42

   62 oneRegOffsetOp: "CFHI" •

    $default  reduce using rule 62 (oneRegOffsetOp)


State 43

   63 oneRegOffsetOp: "CFLO" •

    $default  reduce using rule 63 (oneRegOffsetOp)


State 44

   67 shiftOp: "SLL" •

    $default  reduce using rule 67 (shiftOp)


State 45

   68 shiftOp: "SRL" •

    $default  reduce using rule 68 (shiftOp)


State 46

   64 oneRegOffsetOp: "JMP" •

    $default  reduce using rule 64 (oneRegOffsetOp)


State 47

   71 argOnlyOp: "JREL" •

    $default  reduce using rule 71 (argOnlyOp)


State 48

   73 immedArithOp: "ADDI" •

    $default  reduce using rule 73 (immedArithOp)


State 49

   76 immedBoolOp: "ANDI" •

    $default  reduce using rule 76 (immedBoolOp)


State 50

   77 immedBoolOp: "BORI" •

    $default  reduce using rule 77 (immedBoolOp)


State 51

   79 immedBoolOp: "NORI" •
